[metadata]
name = hnsw
description = CUDA implementation of Hierarchical Navigable Small World (HNSW) graph algorithm for Approximate Nearest Neighbor (ANN)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xiangyangkan/hnsw-gpu
author = xiangyangkan
author_email = "xiangyangkan@outlook.com"
license = Apache 2.0
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: Apache 2.0
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/xiangyangkan/hnsw-gpu/issues
    Documentation = https://github.com/xiangyangkan/hnsw-gpu/docs
    Source Code = https://github.com/xiangyangkan/hnsw-gpu

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.extras_require]
test =
    hypothesis>=5.5.3
    pytest>=6.0
    pytest-xdist>=1.31

[options.package_data]
* = templates/*, _libs/**/*.dll

[build_ext]
inplace = True

[options.packages.find]
include = hnsw, hnsw.*

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = hnsw/_version.py
versionfile_build = hnsw/_version.py
tag_prefix = v
parentdir_prefix = hnsw-